# Aims

./: .dockerignore  .gitignore  COMPLETE_REFACTORING_SUMMARY.md  DARK_MODE_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_GUIDE.md  build.sh  dockerfile  next.config.ts  package.json  wrangler.toml
.github/workflows/: docker-build.yml
app/: layout.tsx  page.tsx
app/components/: ConditionalWrapper.tsx
app/dashboard/: page.tsx
app/lib/: externalApi.ts
app/types/: index.ts
app/userdashboard/: AttendanceSummary.tsx  CourseAttendance.tsx  ErrorState.tsx  LoadingState.tsx  StudentInfoCard.tsx  page.tsx  skeletonloading.tsx
app/utils/: api.ts  batch-processor.ts  performance.ts  statusHelpers.ts
components/: common.ts  index.ts
components/dashboard/: CoursesTabContent.tsx  DashboardContent.tsx  DashboardHeader.tsx  HomeTabContent.tsx  QuizTabContent.tsx
components/layout/: DashboardLayout.tsx  EmptyAttendanceState.tsx  LogoutButton.tsx
components/navigation/: DesktopNavigation.tsx  MobileNavigation.tsx
components/quiz/: QuizStarter.tsx
components/ui/: animated-card.tsx  attendancecalender.tsx  (+9 more)
contexts/: AttendanceContext.tsx
hooks/: index.ts  useAttendanceData.ts  useQuizData.ts  useServiceWorker.ts  useStudentName.ts  useTabNavigation.ts  useTheme.ts
lib/: attendance-config.ts  authStorage.ts
public/: sw.js
rust-backend/: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
rust-backend/src/: cache.rs  config.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  performance.rs  services.rs
(+5 files in other folders)
