[package]
name = "aims-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Parallel processing
rayon = "1.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.4"
urlencoding = "2.1"

# Environment variables
dotenvy = "0.15"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Async streams
futures = "0.3"

# Rate limiting
governor = "0.6"

# HTTP core (used by tests to read response bodies)

# Compression
flate2 = "1.0"

# JSON schema validation
jsonschema = "0.17"

[dev-dependencies]
tokio-test = "0.4"
